# DiningPhilosophersProblem

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: AbstractPhilosopher.cpp  AbstractPhilosopher.h  CMakeLists.txt  Fork.h  LeftHandedPhilosopher.h  OrderedPhilosopher.cpp  OrderedPhilosopher.h  PhilosopherContext.h  PhilosophersFactory.cpp  PhilosophersFactory.h  RightHandedPhilosopher.h  SelfishPhilosopher.cpp  SelfishPhilosopher.h  SimulationArgParser.cpp  SimulationArgParser.h  SimulationConfig.h  Strategy.h  main.cpp
